--- a/src/styles/pdfView.css
+++ b/src/styles/pdfView.css
@@ -20,6 +20,7 @@
   .left-panel {
     background-color: #ffffff;
     border-right: 1px solid #ddd;
+    padding: 0;
   }
   
   .right-panel {
@@ -53,5 +54,13 @@
     font-size: 1.2rem;
     font-weight: bold;
     color: #aaa;
+  }
+  
+  .pdf-iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    display: block;
+    background-color: white;
   }
   
