--- a/src/styles/topic.css
+++ b/src/styles/topic.css
@@ -1,243 +1,213 @@
-.teacher-resource {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .teacher-resource .div {
-    background-color: #ffffff;
-    min-height: 939px;
-    position: relative;
-    width: 100%;
-    max-width: 1440px;
-    padding: 20px;
-  }
-  
-  .teacher-resource .frame {
-    align-items: center;
-    display: inline-flex;
-    gap: 14.35px;
-    margin-bottom: 20px;
-  }
-  
-  .teacher-resource .frame-2 {
-    align-items: center;
-    display: inline-flex;
-    flex: 0 0 auto;
-    gap: 3.19px;
-    justify-content: center;
-    position: relative;
-  }
-  
-  .teacher-resource .text-wrapper {
-    color: #000000;
-    font-family: "Poppins", Helvetica;
-    font-size: 25.5px;
-    font-weight: 600;
-    letter-spacing: 0;
-    line-height: normal;
-    position: relative;
-    width: fit-content;
-  }
-  
-  .teacher-resource .ri-arrow-drop-down {
-    height: 49.42px;
-    position: relative;
-    width: 49.42px;
-  }
-  
-  .teacher-resource .frame-3 {
-    align-items: center;
-    display: flex;
-    gap: 25px;
-    margin-bottom: 20px;
-    flex-wrap: wrap;
-  }
-  
-  .teacher-resource .div-wrapper {
-    align-items: center;
-    border: 1px solid;
-    border-color: #b6b6b6;
-    border-radius: 8px;
-    display: flex;
-    gap: 207px;
-    padding: 10px;
-    position: relative;
-    width: 100%;
-    max-width: 427px;
-  }
-  
-  .teacher-resource .text-wrapper-2 {
-    color: #d9d9d9;
-    font-family: "Nunito", Helvetica;
-    font-size: 22px;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
-    margin-top: -1.00px;
-    position: relative;
-    width: fit-content;
-  }
-  
-  .teacher-resource .frame-4,
-  .teacher-resource .frame-5 {
-    align-items: center;
-    border: 1px solid;
-    border-color: #b6b6b6;
-    border-radius: 8px;
-    display: flex;
-    gap: 10px;
-    justify-content: space-around;
-    padding: 10px;
-    position: relative;
-  }
-  
-  .teacher-resource .frame-4 {
-    width: 114px;
-  }
-  
-  .teacher-resource .frame-5 {
-    width: 97px;
-  }
-  
-  .teacher-resource .text-wrapper-3 {
-    color: #000000;
-    font-family: "Nunito", Helvetica;
-    font-size: 18px;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
-    margin-top: -1.00px;
-    position: relative;
-    width: fit-content;
-  }
-  
-  .teacher-resource .fractions-sub-topics-wrapper {
-    align-items: center;
-    background-color: #f7f7f7;
-    box-shadow: 1px 2px 4px #00000040;
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    padding: 10px;
-    margin-bottom: 20px;
-    width: fit-content;
-  }
-  
-  .teacher-resource .fractions-sub-topics {
-    color: #000000;
-    font-family: "Nunito", Helvetica;
-    font-size: 24px;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
-    margin-top: -1.00px;
-    position: relative;
-    width: fit-content;
-  }
-  
-  .teacher-resource .span {
-    font-weight: 500;
-  }
-  
-  .teacher-resource .text-wrapper-4 {
-    font-size: 18px;
-  }
-  
-  .teacher-resource .topics-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: flex-start;
-  }
-  
-  .teacher-resource .topic-card {
-    width: 100%;
-    max-width: 427px;
-    height: 198px;
-    border: 1px solid #dadada;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 8px;
-    gap: 14.2px;
-  }
-  
-  .teacher-resource .card-content {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .teacher-resource .text-wrapper-5 {
-    color: #000000;
-    font-family: "Nunito", Helvetica;
-    font-size: 24.6px;
-    font-weight: 600;
-    letter-spacing: 0;
-    line-height: normal;
-    text-align: center;
-  }
-  
-  .teacher-resource .p {
-    color: #b9b9b9;
-    font-family: "PT Sans", Helvetica;
-    font-size: 24.2px;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
-    text-align: center;
-  }
-  
-  .teacher-resource .frame-7 {
-    align-items: center;
-    background-color: #f7f7f7;
-    border-radius: 7.57px;
-    display: flex;
-    gap: 9.47px;
-    padding: 9.47px;
-    width: 100%;
-    justify-content: center;
-  }
-  
-  .teacher-resource .text-wrapper-6 {
-    color: #18a0fb;
-    font-family: "Poppins", Helvetica;
-    font-size: 16.1px;
-    font-weight: 600;
-    letter-spacing: 0;
-    line-height: normal;
-    text-decoration: underline;
-  }
-  
-  @media (max-width: 768px) {
-    .teacher-resource .div {
-      padding: 10px;
-    }
-  
-    .teacher-resource .frame-3 {
-      flex-direction: column;
-      align-items: stretch;
-    }
-  
-    .teacher-resource .div-wrapper,
-    .teacher-resource .frame-4,
-    .teacher-resource .frame-5 {
-      width: 100%;
-      max-width: none;
-    }
-  
-    .teacher-resource .topics-container {
-      justify-content: center;
-    }
-  
-    .teacher-resource .topic-card {
-      max-width: none;
-    }
-  }
-  
+.TR {
+  background-color: transparent;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+.group-wrapper {
+  width: 1440px;
+}
+
+.group {
+  height: auto;
+}
+
+.on-boarding-screen {
+  background-color: #ffffff;
+  padding-bottom: 100px;
+  position: relative;
+  width: 100%;
+}
+
+.div {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 56px;
+}
+
+.logo {
+  height: 151.59px;
+  object-fit: cover;
+  width: 158px;
+}
+
+.simplify-teaching {
+  color: transparent;
+  font-family: "Poppins", Helvetica;
+  font-size: 31px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.text-wrapper {
+  color: #000000;
+}
+
+.span {
+  color: #a1caac;
+  font-size: 36px;
+}
+
+.text-wrapper-2 {
+  color: #a1caac;
+  font-size: 37px;
+}
+
+.ellipse {
+  height: 103px;
+  object-fit: cover;
+  width: 103px;
+}
+
+.text-wrapper-3 {
+  color: #000000;
+  font-family: "Poppins", Helvetica;
+  font-size: 36px;
+  font-weight: 600;
+  text-align: center;
+  margin-left: 56px;
+}
+
+.text-wrapper-4 {
+  color: #000000;
+  font-family: "Poppins", Helvetica;
+  font-size: 32px;
+  font-weight: 600;
+  text-align: center;
+  margin: 24px auto;
+}
+
+.frame-2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+  margin: 20px auto;
+  width: 90%;
+  max-width: 800px;
+}
+
+.frame-3,
+.frame-4,
+.frame-5 {
+  display: flex;
+  align-items: center;
+  border: 1px solid #b6b6b6;
+  border-radius: 8px;
+  padding: 10px;
+  min-width: 120px;
+  flex: 1 1 auto;
+}
+
+.frame-3 {
+  justify-content: space-between;
+  min-width: 240px;
+}
+
+.frame-4,
+.frame-5 {
+  justify-content: space-between;
+}
+
+.text-wrapper-5 {
+  color: #d9d9d9;
+  font-family: "Nunito", Helvetica;
+  font-size: 22px;
+}
+
+.img {
+  height: 24px;
+  width: 24px;
+}
+
+.text-wrapper-6 {
+  color: #000000;
+  font-family: "Nunito", Helvetica;
+  font-size: 18px;
+}
+
+.algebra-sub-topics-wrapper {
+  background-color: #ffffff;
+  box-shadow: 1px 2px 4px #00000040;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  padding: 10px;
+  width: fit-content;
+}
+
+.algebra-sub-topics {
+  color: #000000;
+  font-family: "Nunito", Helvetica;
+  font-size: 24px;
+}
+
+.text-wrapper-7 {
+  font-weight: 500;
+}
+
+.text-wrapper-8 {
+  font-size: 18px;
+}
+
+.frame-6 {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+  padding: 0 56px;
+  margin-top: 32px;
+}
+
+.frame-wrapper {
+  width: 427px;
+}
+
+.frame-7 {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  border: 1px solid #d9d9d9;
+  padding: 16px;
+  height: 198px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.div-wrapper {
+  width: 100%;
+  height: 62px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.p {
+  color: #b9b9b9;
+  font-family: "PT Sans", Helvetica;
+  font-size: 20px;
+  text-align: center;
+}
+
+.frame-8 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f7f7f7;
+  border-radius: 8px;
+  padding: 10px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.text-wrapper-9 {
+  color: #a1caac;
+  font-family: "Poppins", Helvetica;
+  font-size: 16px;
+  font-weight: 600;
+  text-decoration: underline;
+}
