--- a/src/styles/teacherResource.css
+++ b/src/styles/teacherResource.css
@@ -1,31 +1,174 @@
-.teacher-resource-container {
-    padding: 2rem;
-    font-family: "Poppins", sans-serif;
-  }
-  
-  .search-controls {
-    display: flex;
-    gap: 1rem;
-    margin-bottom: 2rem;
-  }
-  
-  .search-controls input,
-  .search-controls select {
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-  }
-  
-  .lessons-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 1rem;
-  }
-  
-  .lesson-card {
-    background-color: #f5f5f5;
-    padding: 1rem;
-    border-radius: 10px;
-    text-align: center;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
-  }
-  
+.teacher-resource {
+  background-color: #ffffff;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.teacher-resource .group-wrapper {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.teacher-resource .group {
+  width: 100%;
+}
+
+.teacher-resource .on-boarding-screen {
+  background-color: #ffffff;
+  min-height: 100vh;
+  position: relative;
+  width: 100%;
+  padding: 56px;
+}
+
+.teacher-resource .div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 69px;
+}
+
+.teacher-resource .logo {
+  height: 151.59px;
+  width: 158px;
+  object-fit: cover;
+}
+
+.teacher-resource .simplify-teaching {
+  font-family: "Poppins", Helvetica;
+  font-size: 31px;
+  font-weight: 600;
+  letter-spacing: -0.47px;
+  line-height: normal;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.teacher-resource .span {
+  color: #000000;
+  letter-spacing: -0.14px;
+}
+
+.teacher-resource .text-wrapper-2 {
+  color: #a1caac;
+  font-size: 36px;
+  letter-spacing: -0.19px;
+}
+
+.teacher-resource .text-wrapper-3 {
+  color: #a1caac;
+  font-size: 37px;
+  letter-spacing: -0.21px;
+}
+
+.teacher-resource .ellipse {
+  height: 103px;
+  width: 103px;
+  object-fit: cover;
+}
+
+.teacher-resource .text-wrapper-4 {
+  color: #000000;
+  font-family: "Poppins", Helvetica;
+  font-size: 36px;
+  font-weight: 600;
+  letter-spacing: -0.54px;
+  line-height: normal;
+  margin-bottom: 38px;
+}
+
+.teacher-resource .tab-bar-instance {
+  margin-bottom: 52px;
+  display: flex;
+  justify-content: center;
+}
+
+.teacher-resource .line {
+  height: 1px;
+  width: calc(100% - 374px);
+  margin: 0 auto 76px auto;
+  background-color: #e0e0e0;
+}
+
+.teacher-resource .text-wrapper-5 {
+  color: #000000;
+  font-family: "Poppins", Helvetica;
+  font-size: 32px;
+  font-weight: 600;
+  letter-spacing: 0;
+  line-height: normal;
+  text-align: center;
+  margin-bottom: 83px;
+}
+
+.teacher-resource .frame-2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+  margin-bottom: 40px;
+}
+
+.teacher-resource .frame-3 {
+  display: flex;
+  align-items: center;
+  border: 1px solid #b6b6b6;
+  border-radius: 8px;
+  padding: 10px;
+  width: 427px;
+  justify-content: space-between;
+}
+
+.teacher-resource .text-wrapper-6 {
+  color: #d9d9d9;
+  font-family: "Nunito", Helvetica;
+  font-size: 22px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.teacher-resource .img {
+  height: 24px;
+  width: 24px;
+}
+
+.teacher-resource .frame-4 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #b6b6b6;
+  border-radius: 8px;
+  padding: 10px;
+  width: 114px;
+}
+
+.teacher-resource .text-wrapper-7 {
+  color: #000000;
+  font-family: "Nunito", Helvetica;
+  font-size: 18px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.teacher-resource .frame-5 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #b6b6b6;
+  border-radius: 8px;
+  padding: 10px;
+  width: 97px;
+}
+
+.teacher-resource .tab-3 {
+  height: 51px !important;
+  width: 252.03px !important;
+}
