--- a/src/styles/tabBar.css
+++ b/src/styles/tabBar.css
@@ -1,27 +1,27 @@
 .tab-bar {
-    display: flex;
-    justify-content: center;
-    width: 100%;
+    height: 51px;
+    width: 962px;
   }
   
   .tab-bar .frame {
-    display: flex;
     align-items: center;
-    gap: 75px;
+    display: inline-flex;
+    gap: 30px;
+    position: relative;
   }
   
   .tab-bar .tab-instance {
-    height: 51px;
-    width: 161.66px;
+    height: 51px !important;
+    width: 161.66px !important;
   }
   
   .tab-bar .design-component-instance-node {
-    margin-left: -9.17px;
-    margin-right: -9.17px;
+    margin-left: -9.17px !important;
+    margin-right: -9.17px !important;
   }
   
   .tab-bar .tab-2 {
-    height: 51px;
-    width: 252.03px;
+    height: 51px !important;
+    width: 252.03px !important;
   }
   
