--- a/src/styles/teacherResource.css
+++ b/src/styles/teacherResource.css
@@ -1,15 +1,17 @@
-.teacher-resource {
+/* .teacher-resource {
   background-color: #ffffff;
   min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
 }
 
 .teacher-resource .group-wrapper {
   width: 100%;
   max-width: 1440px;
-  margin: 0 auto;
+  padding: 40px 56px;
 }
 
 .teacher-resource .group {
@@ -17,11 +19,8 @@
 }
 
 .teacher-resource .on-boarding-screen {
-  background-color: #ffffff;
-  min-height: 100vh;
-  position: relative;
   width: 100%;
-  padding: 56px;
+  position: relative;
 }
 
 .teacher-resource .div {
@@ -29,7 +28,6 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-bottom: 69px;
 }
 
 .teacher-resource .logo {
@@ -39,32 +37,24 @@
 }
 
 .teacher-resource .simplify-teaching {
-  font-family: "Poppins", Helvetica;
   font-size: 31px;
   font-weight: 600;
   letter-spacing: -0.47px;
-  line-height: normal;
   text-align: center;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .teacher-resource .span {
   color: #000000;
-  letter-spacing: -0.14px;
 }
 
 .teacher-resource .text-wrapper-2 {
   color: #a1caac;
   font-size: 36px;
-  letter-spacing: -0.19px;
 }
 
 .teacher-resource .text-wrapper-3 {
   color: #a1caac;
   font-size: 37px;
-  letter-spacing: -0.21px;
 }
 
 .teacher-resource .ellipse {
@@ -74,37 +64,30 @@
 }
 
 .teacher-resource .text-wrapper-4 {
-  color: #000000;
-  font-family: "Poppins", Helvetica;
   font-size: 36px;
   font-weight: 600;
-  letter-spacing: -0.54px;
-  line-height: normal;
-  margin-bottom: 38px;
+  margin: 32px 0 16px 0;
+  text-align: left;
 }
 
 .teacher-resource .tab-bar-instance {
-  margin-bottom: 52px;
+  margin-bottom: 24px;
   display: flex;
   justify-content: center;
 }
 
 .teacher-resource .line {
   height: 1px;
-  width: calc(100% - 374px);
-  margin: 0 auto 76px auto;
-  background-color: #e0e0e0;
+  background-color: #d3d3d3;
+  width: 1067px;
+  margin: 0 auto 32px auto;
 }
 
 .teacher-resource .text-wrapper-5 {
-  color: #000000;
-  font-family: "Poppins", Helvetica;
   font-size: 32px;
   font-weight: 600;
-  letter-spacing: 0;
-  line-height: normal;
+  margin-bottom: 24px;
   text-align: center;
-  margin-bottom: 83px;
 }
 
 .teacher-resource .frame-2 {
@@ -127,11 +110,9 @@
 
 .teacher-resource .text-wrapper-6 {
   color: #d9d9d9;
-  font-family: "Nunito", Helvetica;
+  font-family: "Nunito", sans-serif;
   font-size: 22px;
   font-weight: 400;
-  letter-spacing: 0;
-  line-height: normal;
 }
 
 .teacher-resource .img {
@@ -139,36 +120,231 @@
   width: 24px;
 }
 
-.teacher-resource .frame-4 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border: 1px solid #b6b6b6;
-  border-radius: 8px;
-  padding: 10px;
-  width: 114px;
-}
-
-.teacher-resource .text-wrapper-7 {
-  color: #000000;
-  font-family: "Nunito", Helvetica;
-  font-size: 18px;
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
+.teacher-resource .frame-4,
 .teacher-resource .frame-5 {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   border: 1px solid #b6b6b6;
   border-radius: 8px;
   padding: 10px;
-  width: 97px;
+  min-width: 120px;
+  background-color: white;
+}
+
+.teacher-resource select.text-wrapper-7 {
+  font-family: "Nunito", sans-serif;
+  font-size: 18px;
+  color: #000000;
+  background: transparent;
+  border: none;
+  outline: none;
+  width: 100%;
+  appearance: none;
+  cursor: pointer;
+}
+
+.teacher-resource .lessons-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.teacher-resource .lesson-card {
+  width: 427px;
+  height: 80px;
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.teacher-resource .lesson-card:hover {
+  background-color: #e6f2ec;
+}
+
+.teacher-resource .no-lessons-text {
+  font-family: "Nunito", sans-serif;
+  font-size: 20px;
+  color: #999;
+  text-align: center;
+  margin-top: 40px;
 }
 
 .teacher-resource .tab-3 {
   height: 51px !important;
   width: 252.03px !important;
+} */
+
+
+
+.teacher-resource-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  overflow-x: hidden;
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
 }
+
+.box {
+  height: auto;
+  min-height: 1017px;
+  width: 1440px;
+}
+
+.box .group {
+  height: auto;
+  min-height: 1017px;
+  left: 0;
+  position: relative;
+  top: 0;
+  width: 1440px;
+  padding-top: 80px; /* Add some top padding */
+}
+
+.box .on-boarding-screen {
+  background-color: #ffffff;
+  height: auto;
+  min-height: 1017px;
+  overflow: visible;
+  position: relative;
+  padding: 20px 0; /* Add padding for better spacing */
+}
+
+.box .frame {
+  align-items: center;
+  display: flex;
+  left: 56px;
+  position: absolute;
+  top: 76px; /* Increased from 56px to account for padding */
+  width: 1328px;
+}
+
+.box .logo {
+  height: 151.59px;
+  object-fit: cover;
+  position: relative;
+  width: 158px;
+  flex-shrink: 0;
+}
+
+.box .simplify-teaching {
+  font-family: "Poppins", Helvetica;
+  font-size: 31px;
+  font-weight: 600;
+  letter-spacing: -0.47px;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap !important;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  flex-wrap: nowrap !important;
+  flex-shrink: 0;
+  flex-grow: 1;
+  margin: 0 20px;
+  width: max-content;
+}
+
+.box .text-wrapper {
+  color: #000000;
+  letter-spacing: -0.14px;
+  font-size: 31px;
+}
+
+.box .span {
+  color: #a1caac;
+  font-size: 36px;
+  letter-spacing: -0.19px;
+}
+
+.box .text-wrapper-2 {
+  color: #a1caac;
+  font-size: 36px;
+  letter-spacing: -0.19px;
+}
+
+.box .ellipse {
+  height: 103px;
+  object-fit: cover;
+  position: relative;
+  width: 103px;
+  flex-shrink: 0;
+}
+
+.box .line {
+  height: 1px;
+  left: 1441px;
+  object-fit: cover;
+  position: absolute;
+  top: 4944px;
+  width: 1067px;
+}
+
+.box .content-section {
+  position: absolute;
+  left: 56px;
+  top: 280px; /* Increased from 280px to account for padding */
+  bottom: 0px;
+  width: 1328px;
+}
+
+.box .greeting {
+  font-family: "Poppins", Helvetica;
+  font-size: 36px;
+  font-weight: 600;
+  color: #000000;
+  margin: 0 0 0px 0;
+  letter-spacing: -0.5px;
+}
+
+/* Position TabBar right after the greeting */
+.box .tab-bar-instance1 {
+  position: relative !important;
+  left: 0 !important;
+  top: 0 !important;
+  margin-top: -40px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.box .tab-3 {
+  height: 51px !important;
+  width: 252.03px !important;
+}
+
+.box .navigation-tabs {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.box .tab {
+  font-family: "Poppins", Helvetica;
+  font-size: 23.59px;
+  font-weight: 500;
+  color: #666666;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.box .tab:hover {
+  color: #000000;
+}
+
+.box .tab:first-child {
+  color: #000000;
+  font-weight: 600;
+}
+
+/* Remove all teacher-resource styles since we're not using the second section anymore */
