--- a/src/styles/teacherResource.css
+++ b/src/styles/teacherResource.css
@@ -207,7 +207,7 @@
   position: relative;
   top: 0;
   width: 1440px;
-  padding-top: 80px; /* Add some top padding */
+  padding-top: 80px;
 }
 
 .box .on-boarding-screen {
@@ -216,7 +216,7 @@
   min-height: 1017px;
   overflow: visible;
   position: relative;
-  padding: 20px 0; /* Add padding for better spacing */
+  padding: 20px 0;
 }
 
 .box .frame {
@@ -224,7 +224,7 @@
   display: flex;
   left: 56px;
   position: absolute;
-  top: 76px; /* Increased from 56px to account for padding */
+  top: 76px;
   width: 1328px;
 }
 
@@ -292,7 +292,7 @@
 .box .content-section {
   position: absolute;
   left: 56px;
-  top: 280px; /* Increased from 280px to account for padding */
+  top: 280px;
   bottom: 0px;
   width: 1328px;
 }
@@ -302,16 +302,17 @@
   font-size: 36px;
   font-weight: 600;
   color: #000000;
-  margin: 0 0 0px 0;
+  margin: 0 0 12px 0; /* Reduced bottom margin from 24px to 12px */
   letter-spacing: -0.5px;
+  text-align: left;
 }
 
-/* Position TabBar right after the greeting */
+/* Position TabBar right after the greeting with proper centering */
 .box .tab-bar-instance1 {
   position: relative !important;
   left: 0 !important;
   top: 0 !important;
-  margin-top: -40px;
+  margin: 0 auto 60px auto; /* Increased bottom margin from 40px to 60px */
   display: flex;
   justify-content: center;
   width: 100%;
@@ -324,7 +325,7 @@
 
 .box .navigation-tabs {
   display: flex;
-  gap: 20px;
+  gap: 15px; /* Reduced spacing between tabs */
   align-items: center;
   justify-content: center;
 }
@@ -347,4 +348,94 @@
   font-weight: 600;
 }
 
-/* Remove all teacher-resource styles since we're not using the second section anymore */
+/* Teacher Resource Section */
+.box .teacher-resource-section {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px; /* Reduced from 60px to 20px since we increased tab bar bottom margin */
+}
+
+.box .resource-title {
+  color: #000000;
+  font-family: "Poppins", Helvetica;
+  font-size: 32px;
+  font-weight: 600;
+  letter-spacing: 0;
+  line-height: normal;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.box .resource-frame {
+  align-items: center;
+  display: flex;
+  gap: 25px;
+  justify-content: center;
+}
+
+.box .search-div {
+  align-items: center;
+  border: 1px solid #b6b6b6;
+  border-radius: 8px;
+  display: flex;
+  gap: 207px;
+  padding: 10px;
+  position: relative;
+  width: 427px;
+}
+
+.box .search-text {
+  color: #d9d9d9;
+  font-family: "Nunito", Helvetica;
+  font-size: 22px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: normal;
+  margin-top: -1px;
+  position: relative;
+  width: fit-content;
+}
+
+.box .search-img {
+  height: 24px;
+  position: relative;
+  width: 24px;
+}
+
+.box .grade-frame {
+  align-items: center;
+  border: 1px solid #b6b6b6;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  position: relative;
+  width: 114px;
+}
+
+.box .dropdown-text {
+  color: #000000;
+  font-family: "Nunito", Helvetica;
+  font-size: 18px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: normal;
+  margin-top: -1px;
+  position: relative;
+  width: fit-content;
+}
+
+.box .curriculum-frame {
+  align-items: center;
+  border: 1px solid #b6b6b6;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  position: relative;
+  width: 97px;
+}
