--- a/src/styles/pdfView.css
+++ b/src/styles/pdfView.css
@@ -1,240 +1,4 @@
- /* .on-boarding-screen {
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-}
-
-.on-boarding-screen .div {
-  background-color: #ffffff;
-  height: 1017px;
-  position: relative;
-  width: 1440px;
-}
-
-.frame {
-  align-items: center;
-  border-bottom: 0.95px solid #f4f4f4;
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  top: 26px;
-  left: 56px;
-  width: 1328px;
-}
-
-.logo {
-  height: 96px;
-  width: 100.06px;
-  object-fit: cover;
-}
-
-.simplify-teaching {
-  font-family: "Poppins", Helvetica;
-  font-size: 18.3px;
-  font-weight: 600;
-  color: transparent;
-  letter-spacing: -0.27px;
-  text-align: center;
-  width: fit-content;
-}
-
-.text-wrapper {
-  color: #000000;
-  letter-spacing: -0.05px;
-}
-
-.span {
-  color: #a1caac;
-  letter-spacing: -0.05px;
-}
-
-.ellipse {
-  width: 65.23px;
-  height: 65.23px;
-  object-fit: cover;
-}
-
-.text-wrapper-2 {
-  color: #000000;
-  font-family: "Nunito", Helvetica;
-  font-size: 26px;
-  font-weight: 600;
-  position: absolute;
-  top: 264px;
-  left: 56px;
-}
-
-.frame-2 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: absolute;
-  top: 312px;
-  left: 56px;
-  width: 462px;
-}
-
-.div-wrapper {
-  background-color: #ffffff;
-  border-radius: 6.5px;
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-  justify-content: center;
-  padding: 8px;
-  cursor: pointer;
-}
-
-.div-wrapper.active {
-  background-color: #A1CAAC; 
-  color: white;
-}
-
-.text-wrapper-3 {
-  color: #ffffff;
-  font-family: "Poppins", Helvetica;
-  font-size: 19.8px;
-  font-weight: 500;
-}
-
-.text-wrapper-4 {
-  color: #000000;
-  font-family: "Poppins", Helvetica;
-  font-size: 19.8px;
-  font-weight: 400;
-  cursor: pointer;
-}
-
-.main-content {
-  display: flex;
-  position: absolute;
-  top: 379px;
-  left: 56px;
-}
-
-.pdf-container {
-  width: 783px;
-  height: 591px;
-  margin-right: 24px;
-  background: #fff;
-  border: 1px solid #00000033;
-  border-radius: 8px;
-  overflow: hidden;
-}
-
-.pdf-iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-
-.group-wrapper {
-  width: 504px;
-  height: 591px;
-  box-shadow: 2px 5px 5px #0000002b, 0 0 6px #0000002b;
-}
-
-.group {
-  height: 645px;
-  margin-top: -54px;
-}
-
-.overlap-group {
-  position: relative;
-  width: 505px;
-  height: 645px;
-}
-
-.rectangle {
-  background-color: #fcfcfc;
-  border-radius: 8px;
-  position: absolute;
-  top: 54px;
-  width: 502px;
-  height: 591px;
-}
-
-.group-2 {
-  position: absolute;
-  width: 505px;
-  top: 0;
-  left: 0;
-  height: 374px;
-}
-
-.text-wrapper-5 {
-  position: absolute;
-  top: 326px;
-  left: 149px;
-  color: #b9b9b9;
-  font-family: "Poppins", Helvetica;
-  font-size: 32px;
-  font-weight: 200;
-}
-
-.frame-3 {
-  display: inline-flex;
-  gap: 7px;
-  position: absolute;
-  top: 10px;
-  left: 0;
-}
-
-.frame-4 {
-  display: flex;
-  justify-content: space-between;
-  padding: 11px 8px;
-  position: absolute;
-  top: 0;
-  left: 104px;
-  width: 399px;
-}
-
-.img {
-  height: 24px;
-  width: 24px;
-  cursor: pointer;
-}
-
-.group-3 {
-  height: 21px;
-  position: absolute;
-  top: 3px;
-  left: 3px;
-  width: 18px;
-}
-
-.whiteboard-canvas {
-  position: absolute;
-  top: 54px;
-  left: 0;
-  width: 502px;
-  height: 591px;
-  z-index: 2;
-  background-color: transparent;
-}
-
-.resources-iframe-container {
-  width: 100%;
-  background-color: #ffffff;
-  padding: 2rem;
-  display: flex;
-  justify-content: center;
-}
-
-.resources-iframe {
-  width: 80%;
-  height: 600px;
-  border: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
- */
-
-
-
- .model {
+.model {
   background-color: transparent;
   display: flex;
   flex-direction: row;
@@ -265,93 +29,61 @@
   position: absolute;
   top: 230px;
   width: 466px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
-.model .div .frame {
-  background-color: #000000;
-  border-radius: 2px;
-  height: 40px;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 40px;
-}
-.model .div .text-wrapper {
-  color: #ffffff;
-  font-family: "Poppins", Helvetica;
-  font-size: 19.8px;
-  font-weight: 500;
-  left: 14px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: 4px;
-}
-.model .div-wrapper {
-  background-color: #0008fb;
-  border-radius: 2px;
-  height: 40px;
-  left: 71px;
-  position: absolute;
-  top: 0;
-  width: 40px;
-}
-.model .div .frame-2 {
-  background-color: #ff0000;
-  border-radius: 2px;
-  height: 40px;
-  left: 142px;
-  position: absolute;
-  top: 0;
-  width: 40px;
-}
-.model .div .frame-3 {
-  background-color: #0ca50f;
-  border-radius: 2px;
-  height: 40px;
-  left: 213px;
-  position: absolute;
-  top: 0;
-  width: 40px;
-}
-.model .div .solar-pen-bold-wrapper {
+
+.model .solar-pen-bold-wrapper {
   background-color: #ffffff;
-  border: 1px solid;
-  border-color: #000000;
+  border: none;
   border-radius: 2px;
   height: 40px;
-  left: 284px;
-  position: absolute;
-  top: 0;
+  position: relative;
   width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.model .color-picker {
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 2px !important;
+  border: none !important;
+  cursor: pointer !important;
+  background-color: transparent !important;
+  outline: none !important;
+  position: relative;
+}
+
+.model .solar-eraser-bold-wrapper {
+  background-color: #ffffff;
+  border: none;
+  border-radius: 2px;
+  height: 40px;
+  position: relative;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.model .fa-solid-highlighter-wrapper {
+  background-color: #ffffff;
+  border: none;
+  border-radius: 2px;
+  height: 40px;
+  position: relative;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .model .div .img {
   height: 24px;
-  left: 8px;
-  position: absolute;
-  top: 8px;
   width: 24px;
-}
-.model .div .solar-eraser-bold-wrapper {
-  background-color: #ffffff;
-  border: 1px solid;
-  border-color: #000000;
-  border-radius: 2px;
-  height: 40px;
-  left: 355px;
-  position: absolute;
-  top: 0;
-  width: 40px;
-}
-.model .div .fa-solid-highlighter-wrapper {
-  background-color: #ffffff;
-  border: 1px solid;
-  border-color: #000000;
-  border-radius: 2px;
-  height: 40px;
-  left: 426px;
-  position: absolute;
-  top: 0;
-  width: 40px;
 }
 
 /* Header Styles */
@@ -428,9 +160,9 @@
   width: 462px;
 }
 
+/* Updated Tab Styles */
 .model .tab-wrapper {
   align-items: center;
-  background-color: #a1caac;
   border-radius: 6.5px;
   display: inline-flex;
   flex: 0 0 auto;
@@ -438,8 +170,47 @@
   justify-content: center;
   padding: 8.13px 16px;
   position: relative;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 
+/* Active Tab Style */
+.model .tab-wrapper.tab-active {
+  background-color: #a1caac;
+}
+
+/* Inactive Tab Style */
+.model .tab-wrapper.tab-inactive {
+  background-color: transparent;
+  border: none;
+}
+
+.model .tab-wrapper.tab-inactive:hover {
+  background-color: #f5f5f5;
+}
+
+/* Tab Text Styles */
+.model .tab-text {
+  font-family: "Poppins", Helvetica;
+  font-size: 19.8px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: normal;
+  position: relative;
+  width: fit-content;
+}
+
+/* Text color for active tabs */
+.model .tab-wrapper.tab-active .tab-text {
+  color: #ffffff;
+}
+
+/* Text color for inactive tabs */
+.model .tab-wrapper.tab-inactive .tab-text {
+  color: #000000;
+}
+
+/* Remove old tab styles */
 .model .tab-active {
   color: #ffffff;
   font-family: "Poppins-Medium", Helvetica;
